# ollamomui

./: .env.example  .env.production  .gitignore  .lighthouserc.js  ASSETS.md  CHANGELOG.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  COPYRIGHT.txt  Dockerfile  EXECUTION_GUIDE.md  HANDOFF.md  LICENSE  MOBILE.md  README.md  SECURITY.md  build_exe.bat  claude-code-env.bat  claude-code-env.sh  cli.py  db.py  device_identity.py  docker-compose.yml  make_icons.py  memory.py  ollama_emu_desktop.py  ollamaemu.sh  opencode.example.json  package.json  pyproject.toml  rag.py  requirements.txt  run.bat  run.sh  setup_database.sql  test.py  vercel.json
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: deploy-pages.yml  lighthouse.yml  publish-npm.yml  release.yml  set-package-public.yml  test.yml
.opencode/: opencode.json  settings.json
backend/scripts/: build_exe.bat  claude-code-env.bat
backend/tests/: test_api.py
configs/: .env.example  .lighthouserc.js  package.json  setup_database.sql
deploy/: README.md  nginx.conf
desktop/: README.md  build.py  build.spec  fetch_postgres.py  postgres_bootstrap.py  requirements.txt
desktop/src/: api_client.py  launcher.py  qml_engine.py  updater.py
docs/: API.md  ASSETS.md  MOBILE.md  README.md  SECURITY.md
frontend/: .env.example  eslint.config.mjs  next.config.js  next.config.ts  package-lock.json  package.json
frontend/public/: robots.txt  sitemap.xml
mobile/: app.json  gen-assets.js  package-lock.json  package.json  theme.ts  tsconfig.json
mobile/app/: _layout.tsx  about.tsx  chat.tsx  index.tsx  license.tsx  providers.tsx  settings.tsx  usage.tsx
mobile/lib/: api.ts  (+1 more)
temp/: endtest.err  endtest.out
(+86 files in other folders)
