[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ollamomui"
version = "1.0.4"
description = "OllamoMUI – A free, self-hosted AI gateway with RAG, memory, and a stunning desktop GUI."
readme = "docs/README.md"
license = {text = "MIT"}
requires-python = ">=3.11"
authors = [
    {name = "Rhasan@dev", email = "rbkhan00009@gmail.com"},
]
keywords = ["llm", "ollama", "openrouter", "free", "ai", "proxy", "rag"]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn>=0.32.0",
    "httpx>=0.27.0",
    "python-multipart>=0.0.9",
    "numpy>=1.26.0",
    "psycopg2-binary>=2.9.9",
    "pgvector>=0.3.0",
    "python-dotenv>=1.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
]
sentence-transformers = [
    "sentence-transformers>=2.0.0",
]

[project.scripts]
ollamomui = "ollama_emu.cli:main"

[project.urls]
Homepage = "https://github.com/rbkhan007/ollamomui"
Repository = "https://github.com/rbkhan007/ollamomui"
Issues = "https://github.com/rbkhan007/ollamomui/issues"

[tool.setuptools.packages.find]
where = ["backend/src"]

[tool.ruff]
line-length = 120
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "W", "I"]
ignore = ["E501"]
